# TableFox

./: .env.example  .gitignore  DESIGN.md  FUNCTIONAL_CHECKLIST.md  MCP_AGENT_GUIDE.md  PRODUCT.md  README.md  package-lock.json  package.json  run.ps1  tablefox-auth.example.json  tablefox-context.example.json
.github/workflows/: quality.yml  schema-impact.yml
apps/web/: next.config.mjs  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
examples/postgres/: docker-compose.yml
examples/postgres/init/: 01-schema.sql  02-readonly-role.sql
scripts/: dev.py  run_api.ps1  run_mcp.ps1  run_sample_postgres.ps1  run_web.ps1
services/dbmap/: pyproject.toml
services/dbmap/src/dbmap/: __init__.py  api.py  audit.py  cli.py  config.py  context.py  diff.py  explain.py  graph.py  ids.py  mcp_server.py  models.py  postgres.py  query_policy.py  readonly.py  search.py  security.py  service.py
services/dbmap/tests/: test_api.py  test_config.py  test_explain.py  test_governance.py  test_graph.py  test_mcp_server.py  test_postgres.py  test_query_policy.py  test_readonly.py  test_search.py  test_service.py
