[project]
name = "dbmap"
version = "0.1.0"
description = "Local PostgreSQL database graph mapper with FastAPI and MCP stdio entry points."
readme = "../../README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "psycopg[binary]>=3.2.0",
  "mcp>=1.3.0",
  "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0"
]

[project.scripts]
dbmap-api = "dbmap.cli:run_api"
dbmap-mcp = "dbmap.mcp_server:main"
dbmap-snapshot = "dbmap.cli:print_snapshot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dbmap"]
